--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter  
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flappy_translator: ^1.2.2
 
 flutter:
   uses-material-design: true
@@ -47,3 +50,14 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flappy_translator:
+  input_file_path: "assets_dev/localizations/localizations.csv"
+  output_dir: "lib"
+  file_name: "localizations"
+  class_name: "AppLocalizations"
+  delimiter: ";"
+  start_index: 1
+  depend_on_context: false
+  use_single_quotes: true
+  replace_no_break_spaces: false
