Added pseudo localizator.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flappy_translator: ^1.2.2
+  flutter_pseudolocalizor: ^0.2.0
 
 flutter:
   uses-material-design: true
@@ -52,7 +53,7 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
 
 flappy_translator:
-  input_file_path: "assets_dev/localizations/localizations.csv"
+  input_file_path: "assets_dev/localizations/localizations-PSEUDO.csv"
   output_dir: "lib"
   file_name: "localizations"
   class_name: "AppLocalizations"
@@ -61,3 +62,15 @@ flappy_translator:
   depend_on_context: false
   use_single_quotes: true
   replace_no_break_spaces: false
+
+flutter_pseudolocalizor:
+  input_filepath: "assets_dev/localizations/localizations.csv"
+  replace_base: false
+  use_brackets: true
+  text_expansion_ratio: null
+  languages_to_generate:
+    - de
+  csv_settings:
+    delimiter: ";"
+    column_index: 1
+  patterns_to_ignore: null
