--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,16 +3,20 @@ description: A chat messenger built using Flutter.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter  
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flappy_translator: ^1.2.2
+  flutter_pseudolocalizor: ^0.2.0
 
 flutter:
   uses-material-design: true
@@ -47,3 +51,26 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flappy_translator:
+  input_file_path: "assets_dev/localizations/localizations-PSEUDO.csv"
+  output_dir: "lib"
+  file_name: "localizations"
+  class_name: "AppLocalizations"
+  delimiter: ";"
+  start_index: 1
+  depend_on_context: false
+  use_single_quotes: true
+  replace_no_break_spaces: false
+
+flutter_pseudolocalizor:
+  input_filepath: "assets_dev/localizations/localizations.csv"
+  replace_base: false
+  use_brackets: true
+  text_expansion_ratio: null
+  languages_to_generate:
+    - de
+  csv_settings:
+    delimiter: ";"
+    column_index: 1
+  patterns_to_ignore: null
