--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter  
   cupertino_icons: ^0.1.2
+  firebase_auth: ^0.16.0
 
 dev_dependencies:
   flutter_test:
