--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter  
   cupertino_icons: ^0.1.2
   firebase_auth: ^0.16.0
+  provider: ^4.0.5
 
 dev_dependencies:
   flutter_test:
