--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,11 @@ dependencies:
   cupertino_icons: ^0.1.2
   firebase_auth: ^0.16.0
   provider: ^4.0.5
+  mobx: ^1.1.1
+  mobx_codegen: ^1.0.3
+  flutter_mobx: ^1.1.0
+  build_runner: ^1.8.1
+  flutter_secure_storage: ^3.3.3
 
 dev_dependencies:
   flutter_test:
