--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_mobx: ^1.1.0
   build_runner: ^1.8.1
   flutter_secure_storage: ^3.3.3
+  cloud_firestore: ^0.13.5
 
 dev_dependencies:
   flutter_test:
